# SmartHome

./: .gitignore  CMakeLists.txt  README.txt
include/: AuthMiddleware.h  DatabaseManagerSQLite.h  Gestionnaire.h
smarthome_flutter/: .gitignore  README.md  pubspec.yaml
smarthome_flutter/lib/: main.dart
smarthome_flutter/lib/models/: action_historique.dart  capteur.dart  room.dart  seuil.dart
smarthome_flutter/lib/pages/: add_capteur_page.dart  alertes_page.dart  equipements_page.dart  historique_page.dart  home_page.dart  login_page.dart  register_page.dart  rooms_page.dart  seuils_page.dart
smarthome_flutter/lib/services/: api_service.dart
smarthome_flutter/lib/widgets/: sensor_card.dart
smarthome_server/: CMakeLists.txt
smarthome_server/include/: AuthMiddleware.h  Capteur.h  DatabaseManagerSQLite.h  Gestionnaire.h  Maison.h  Room.h  Routes.h
smarthome_server/include/routes/: routes_auth.h  routes_capteurs.h  routes_equipements.h  routes_historique.h  routes_seuils.h
smarthome_server/src/: DatabaseManagerSQLite.cpp  Maison.cpp  Routes.cpp  main.cpp
smarthome_server/src/routes/: routes_auth.cpp  routes_capteurs.cpp  routes_equipements.cpp  routes_historique.cpp  routes_seuils.cpp
src/: Capteur.cpp  DatabaseManagerSQLite.cpp  Gestionnaire.cpp  Room.cpp  Routes.cpp  main.cpp
